# depviz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  compatibility.yml
docs/: architecture.md  compatibility.md  conda-pip-backend.md  conda-resolver.md  deployment-lifecycle.md  maintenance.md  planning-locking.md  plugin-conformance.md  python-uv-backend.md  release-hardening.md
src/depviz/: __main__.py  analyzer.py  cache.py  fetchers.py  main.py  models.py  parsers.py  renderer.py  serialization.py
src/depviz/analysis/: __init__.py  diff.py  graph.py  impact.py  policies.py
src/depviz/api/: __init__.py  capabilities.py  context.py  diagnostics.py  errors.py  models.py  plugin.py  protocols.py  version.py
src/depviz/builtin/: __init__.py
src/depviz/cli/: __init__.py  commands.py  dispatch.py  exit_codes.py  (+3 more)
tests/: environment.yml  requirements.txt  test_analyzer.py  test_cache.py  test_cli_commands.py  test_commands.py  test_conda_driver_commands.py  test_conda_inspector.py  test_conda_locking.py  test_conda_resolver.py  test_conda_tool_selection.py  test_fetchers.py  test_inspection.py  test_maintenance.py  test_manifest_reliability.py  test_mixed_backend.py  test_parsers.py  test_phase3_cli_integration.py  test_phase3_plugins_and_schemas.py  test_phase4_cli_integration.py  test_phase4_lifecycle.py  test_phase5_schemas.py  test_planning.py  test_plugins.py  test_pyproject_manifest.py  test_python_backend.py  test_resolution_serialization.py  test_resolve_cli_integration.py
tests/compatibility/: test_conda_transaction_shapes.py  test_real_uv.py  test_tool_versions.py
tests/failure_injection/: test_apply_interruptions.py  test_concurrency.py  test_filesystem_failures.py  test_switch_recovery.py
tests/hardening/: test_cli_exit_codes.py  test_document_contracts.py  test_document_rejection.py  test_release_metadata.py  test_secret_redaction.py  test_state_corruption_and_cleanup.py
tests/security/: test_cli_security_flags.py  test_integrity_defaults.py
(+69 files in other folders)
